@@ -11,8 +11,8 @@ define( function( require ) {
   "use strict";
 
   // imports
+  var Circle = require( "SCENERY/nodes/Circle" );
   var Color = require( "SCENERY/util/Color" );
-  var DebugOriginNode = require( "common/util/DebugOriginNode" );
   var inherit = require( "PHET_CORE/inherit" );
   var Node = require( "SCENERY/nodes/Node" );
   var Path = require( "SCENERY/nodes/Path" );
@@ -86,7 +86,7 @@ define( function( require ) {
     solution.volume.addObserver( update );
 
     if ( DEBUG_ORIGIN ) {
-      thisNode.addChild( new DebugOriginNode() );
+      thisNode.addChild( new Circle( { radius: 3, fill: 'red' } ) );
     }
   }
 
